--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-color-scheme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -379,19 +379,22 @@
                     </div>
                 </div>
                 <form class="contact-form card">
-                    <div class="card__body">
-                        <div class="form-group">
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" id="name" name="name" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" id="email" name="email" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject" class="form-label">Subject</label>
-                            <input type="text" id="subject" name="subject" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message" class="form-label">Message</label>
-                            <textarea id="message" name="message" class="form-control" rows="5" required>
+				  <div class="card__body">
+					<div class="form-group">
+					  <label for="name" class="form-label">Name</label>
+					  <input type="text" id="name" name="name" class="form-control" required>
+					</div>
+
+					<div class="form-group">
+					  <label for="email" class="form-label">Email</label>
+					  <input type="email" id="email" name="email" class="form-control" required>
+					</div>
+
+					<div class="form-group">
+					  <label for="subject" class="form-label">Subject</label>
+					  <input type="text" id="subject" name="subject" class="form-control" required>
+					</div>
+
+					<div class="form-group">
+					  <label for="message" class="form-label">Message</label>
+					  <textarea id="message" name="message" class="form-control" rows="5" required>
