--- a/index.html
+++ b/index.html
@@ -398,3 +398,17 @@
 					<div class="form-group">
 					  <label for="message" class="form-label">Message</label>
 					  <textarea id="message" name="message" class="form-control" rows="5" required>
+					</div>
+                        <button type="submit" class="btn btn--primary btn--full-width">Send Message</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Scroll to Top Button -->
+    <button id="scrollTop" class="scroll-top btn btn--primary">â†‘</button>
+
+    <script src="app.js"></script>
+</body>
+</html>
