--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+		<div id="particles-bg" aria-hidden="true"></div>
         <div class="hero-content">
             <h1 class="hero-title">Pranava Kumar</h1>
             <p class="hero-subtitle">I am a <span id="typewriter"></span><span class="cursor">|</span></p>
