--- a/index.html
+++ b/index.html
@@ -411,5 +411,7 @@
 	<button id="scrollTop" class="scroll-top btn btn--primary">&uarr;</button>
 
     <script src="app.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/tsparticles@3/tsparticles.bundle.min.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
