--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Particle Network Canvas - Add right after <body> tag -->
+<canvas id="particle-canvas"></canvas>
+
 <!-- Loading Animation -->
 <div id="loading" class="loading">
 <div class="loading-spinner"></div>
