--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- Particle Network Canvas - Add right after <body> tag -->
-<canvas id="particle-canvas"></canvas>
-
 <!-- Loading Animation -->
 <div id="loading" class="loading">
 <div class="loading-spinner"></div>
@@ -410,6 +407,7 @@
 </section>
 
 <!-- Scroll to Top Button -->
+    <button id="scrollTop" class="scroll-top btn btn--primary">â†‘</button>
 	<button id="scrollTop" class="scroll-top btn btn--primary">&uarr;</button>
 
 <script src="app.js"></script>
